--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ djangorestframework = "3.12.4"
 whitenoise = "5.3.0"
 uwsgi = "2.0.19.1"
 django-environ = "0.4.5"
+psycopg2 = "2.9.1"
+argon2-cffi = "20.1.0"
+django-extensions = "^3.1.3"
+django-nested-admin = "^3.3.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.910"
