--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2 = "2.9.1"
 argon2-cffi = "20.1.0"
 django-extensions = "^3.1.3"
 django-nested-admin = "^3.3.3"
+Pygments = "2.10.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.910"
