--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,17 @@ django-environ = "0.4.5"
 psycopg2 = "2.9.1"
 argon2-cffi = "20.1.0"
 Pygments = "2.10.0"
+types-Pygments = "2.9.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.910"
-django-stubs = "1.8.0"
+django-stubs = "1.9.0"
 coverage = "5.5"
 django-coverage-plugin = "2.0.0"
 flake8 = "3.9.2"
 flake8-isort = "4.0.0"
 pydocstyle = "6.1.1"
-django-extensions = "^3.1.3"
+django-extensions = "3.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
