--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
   Mypy:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
       - uses: actions/checkout@v2
       - name: Install Poetry
         run: |
