XML and Plain Text response formats implemented. (#10)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,17 @@
 .DS_Store
+.env.local
+.env.prod
+.env.staging
 .git
 .github
-.gitmodules
 .idea
+.pylintrc
+.pytest_cache
+.python-version
+.vscode
 .mypy_cache
-Dockerfile
-Dockerfile.archive
 docker-compose.*yml
 stubborn/settings/.env
+staticfiles
 *.bak
-!.coveragerc
 !.env.test
