Request log displaying fixed. Routing fixed.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 
 COPY pyproject.toml /app/pyproject.toml
 COPY poetry.lock /app/poetry.lock
-RUN poetry install
+RUN poetry install --no-dev
 
 COPY . .
 RUN ln -f .env.test /app/stubborn/settings/.env
