--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2 = "2.9.1"
 types-Pygments = "2.9.10"
 uwsgi = "2.0.20"
 whitenoise = "5.3.0"
+requests = "2.27.1"
 
 [tool.poetry.dev-dependencies]
 coverage = "6.2"
