--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
 DJANGO_DEBUG_MODE='True'
-DATABASE_URL=postgres://stubborn_test:postgres@postgres:5432/stubborn_test
+DATABASE_URL=postgres://stubborn_test:postgres@127.0.0.1:5432/stubborn_test
 SECRET_KEY='stubborn-insecure-test!sakSDs6kfdsa)_sala21*43h)!@jdfsd1f24s)j@sEDF'
