--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,24 +12,27 @@ argon2-cffi = "21.3.0"
 django = "3.2.12"
 django-environ = "0.8.1"
 djangorestframework = "3.13.1"
+djangorestframework-xml = "2.0.0"
 ipdb = "0.13.9"
 psycopg2 = "2.9.1"
+requests = "2.27.1"
 types-Pygments = "2.9.10"
 uwsgi = "2.0.20"
 whitenoise = "5.3.0"
-requests = "2.27.1"
-djangorestframework-xml = "2.0.0"
 
 [tool.poetry.dev-dependencies]
+Faker = "13.3.4"
 coverage = "6.2"
 django-coverage-plugin = "2.0.2"
 django-extensions = "3.1.5"
 django-stubs = "1.9.0"
+factory-boy = "3.2.1"
 flake8 = "4.0.1"
 flake8-isort = "4.1.1"
 ipython = "8.0.1"
 mypy = "0.910"
 pydocstyle = "6.1.1"
+pytest-django = "4.5.2"
 types-requests = "2.27.15"
 
 [build-system]
