Tests covering base functionality implemented. (#24)
* Tests covering base functionality implemented.
* Dependencies updated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,30 +7,34 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-Pygments = "2.10.0"
+Pygments = "2.11.2"
 argon2-cffi = "21.3.0"
-django = "3.2.12"
+django = "3.2.13"
 django-environ = "0.8.1"
 djangorestframework = "3.13.1"
+djangorestframework-xml = "2.0.0"
 ipdb = "0.13.9"
-psycopg2 = "2.9.1"
-types-Pygments = "2.9.10"
+psycopg2 = "2.9.3"
+requests = "2.27.1"
 uwsgi = "2.0.20"
 whitenoise = "5.3.0"
-requests = "2.27.1"
-djangorestframework-xml = "2.0.0"
 
 [tool.poetry.dev-dependencies]
-coverage = "6.2"
+Faker = "13.4.0"
+codecov = "2.1.12"
 django-coverage-plugin = "2.0.2"
 django-extensions = "3.1.5"
 django-stubs = "1.9.0"
+factory-boy = "3.2.1"
 flake8 = "4.0.1"
 flake8-isort = "4.1.1"
-ipython = "8.0.1"
+ipython = "8.2.0"
 mypy = "0.910"
 pydocstyle = "6.1.1"
-types-requests = "2.27.15"
+pytest-cov = "3.0.0"
+pytest-django = "4.5.2"
+types-Pygments = "2.9.19"
+types-requests = "2.27.20"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
