WIP: Global proxy functionality implemented.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -4,6 +4,9 @@ base = /app
 
 http = 0.0.0.0:8000
 master = true
+processes = 3
+max-requests = 5000
+buffer-size = 32768
 pythonpath = /usr/local/bin/python
 pidfile = /tmp/uwsgi.pid
 chdir = %(base)
