--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2 = "2.9.3"
 requests = "2.27.1"
 uwsgi = "2.0.20"
 whitenoise = "5.3.0"
+Jinja2 = "3.1.2"
 
 [tool.poetry.dev-dependencies]
 Faker = "13.4.0"
