--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ django-environ = "0.8.1"
 djangorestframework = "3.13.1"
 djangorestframework-xml = "2.0.0"
 ipdb = "0.13.9"
-psycopg2 = "2.9.3"
+psycopg2-binary = "2.9.3"
 requests = "2.27.1"
 uwsgi = "2.0.20"
 whitenoise = "5.3.0"
