Whitenoise removed. Uwsgi additionally set up.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -11,6 +11,7 @@ pythonpath = /usr/local/bin/python
 pidfile = /tmp/uwsgi.pid
 chdir = %(base)
 wsgi-file = stubborn/wsgi.py
+check-static = %(base)
 enable-threads = true
 uid = django
 gid = django
