--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,10 +6,9 @@ build:
     python: "3.9"
 
 sphinx:
-   builder: html
-   configuration: docs/conf.py
+  builder: html
+  configuration: docs/conf.py
 
 python:
   install:
-    - method: pip
-      path: .
+    - requirements: docs/requirements.txt
