--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "stubborn"
-version = "0.5.0"
+version = "0.5.1"
 description = "Just a simple REST API stub service."
 authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
 license = "MIT"
@@ -14,28 +14,29 @@ argon2-cffi = "21.3.0"
 django = "3.2.16"
 django-cors-headers = "3.13.0"
 django-environ = "0.9.0"
-djangorestframework = "3.13.1"
+djangorestframework = "3.14.0"
 djangorestframework-xml = "2.0.0"
-ipdb = "0.13.9"
-psycopg2-binary = "2.9.3"
+ipdb = "0.13.11"
+psycopg2-binary = "2.9.5"
 requests = "2.28.1"
-uwsgi = "2.0.20"
+uwsgi = "2.0.21"
 
 [tool.poetry.dev-dependencies]
+black = "22.12.0"
 codecov = "2.1.12"
-django-coverage-plugin = "2.0.3"
-django-extensions = "3.2.0"
+django-coverage-plugin = "3.0.0"
+django-extensions = "3.2.1"
 django-stubs = "1.9.0"
 factory-boy = "3.2.1"
-flake8 = "5.0.4"
-flake8-isort = "4.2.0"
-ipython = "8.4.0"
+flake8 = "6.0.0"
+flake8-isort = "5.0.3"
+ipython = "8.7.0"
 mypy = "0.910"
 pydocstyle = "6.1.1"
-pytest-cov = "3.0.0"
+pytest-cov = "4.0.0"
 pytest-django = "4.5.2"
 types-Pygments = "2.9.19"
-types-requests = "2.28.8"
+types-requests = "2.28.11.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
