--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,12 @@ pytest-django = "4.5.2"
 types-Pygments = "2.9.19"
 types-requests = "2.28.11.7"
 
+[tool.black]
+line-length = 120
+include = ".pyi?$"
+force-exclude = "migrations"
+skip-string-normalization = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
