UI improved for Hooks & Request Logs.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 projectname = stubborn
-base = /app
+base = /Users/sergio/Develop/personal/stubborn
+
 
 http = 0.0.0.0:8000
 master = true
