--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ ipdb = "0.13.11"
 psycopg2-binary = "2.9.5"
 requests = "2.28.1"
 uwsgi = "2.0.21"
+django-admin-rangefilter = "0.9.0"
 
 [tool.poetry.dev-dependencies]
 black = "22.12.0"
