Improved logging of incoming API requests and service responses.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 projectname = stubborn
-base = /Users/sergio/Develop/personal/stubborn
+base = /app
 
 
 http = 0.0.0.0:8000
@@ -14,6 +14,8 @@ chdir = %(base)
 wsgi-file = stubborn/wsgi.py
 check-static = %(base)
 enable-threads = true
+log-date = %%Y-%%m-%%d %%T,%%s %%Z
+logformat-strftime = true
 uid = django
 gid = django
-log-format = [%(ltime)] -- [pid: %(pid)] [%(addr)] %(user) uWSGI : Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
+log-format = UWSGI %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
