Build Action updated.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
-name: ci
+name: Build
 
 on:
   schedule:
     - cron: "0 10 * * *"
   push:
-    branches:
-      - "**"
     tags:
       - "v*.*.*"
+      - "v*.*.*-rc"
   pull_request:
     branches:
       - "main"
@@ -35,7 +34,6 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
