--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -2,6 +2,7 @@
 projectname = stubborn
 base = /app
 
+
 http = 0.0.0.0:8000
 master = true
 processes = 3
@@ -13,6 +14,8 @@ chdir = %(base)
 wsgi-file = stubborn/wsgi.py
 check-static = %(base)
 enable-threads = true
+log-date = %%Y-%%m-%%d %%T,%%s %%Z
+logformat-strftime = true
 uid = django
 gid = django
-log-format = [%(ltime)] -- [pid: %(pid)] [%(addr)] %(user) uWSGI : Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
+log-format = UWSGI %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
