Healthcheck script added.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -18,4 +18,4 @@ log-date = %%Y-%%m-%%d %%T,%%s %%Z
 logformat-strftime = true
 uid = django
 gid = django
-log-format = %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] UWSGI - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
+log-format = %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] uWSGI - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
