--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,6 +30,6 @@ USER django
 
 EXPOSE 8000
 
-HEALTHCHECK --interval=20s --timeout=3s --start-period=30s CMD curl --fail http://localhost:8000/srv/alive || exit 1
+HEALTHCHECK --interval=20s --timeout=3s --start-period=30s CMD python scripts/healthcheck.py || exit 1
 ENTRYPOINT []
 CMD make run
