Dockerfile updated, docker image size reduced.

--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -8,7 +8,7 @@ master = true
 processes = 3
 max-requests = 5000
 buffer-size = 32768
-pythonpath = /usr/local/bin/python
+pythonpath = /opt/venv/bin/python
 pidfile = /tmp/uwsgi.pid
 chdir = %(base)
 wsgi-file = stubborn/wsgi.py
@@ -18,4 +18,5 @@ log-date = %%Y-%%m-%%d %%T,%%s %%Z
 logformat-strftime = true
 uid = django
 gid = django
+plugin = python3
 log-format = %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] uWSGI - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
