"Stub it!" functionality fixed, README and examples updated.

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+DJANGO_SETTINGS_MODULE=stubborn.settings.local
 DJANGO_DEBUG_MODE='True'
-DATABASE_URL=postgres://stubborn_local:postgres@postgres:5432/stubborn_local
+DATABASE_URL=postgres://stubborn_local:postgres@127.0.0.1:5432/stubborn_local
 SECRET_KEY='stubborn-insecure!$k%6kqx6a)-a6d7j8*n(!154#t+^5f)#^z5mjvlrf#u!'
