--- a/stubborn/settings/uwsgi/uwsgi_dev.ini
+++ b/stubborn/settings/uwsgi/uwsgi_dev.ini
@@ -1,11 +1,11 @@
 [uwsgi]
 projectname = stubborn
-base = /app
+base = .
 
 
 http = 0.0.0.0:8000
 master = true
-processes = 3
+processes = 1
 max-requests = 5000
 buffer-size = 32768
 pythonpath = /opt/venv/bin/python
@@ -18,5 +18,4 @@ log-date = %%Y-%%m-%%d %%T,%%s %%Z
 logformat-strftime = true
 uid = django
 gid = django
-plugin = python3
 log-format = %(ftime) - [pid: %(pid)] [%(addr) / %(var.HTTP_X_REAL_IP)] uWSGI - Request: %(method) %(uri). Response: %(status) (%(size) bytes) completed in %(msecs)ms.
