--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,14 @@ jobs:
   Mypy:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Python 3.10
+      - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
-          python-version: "3.10"
+          python-version: "3.9"
       - uses: actions/checkout@v2
-      - name: Install Poetry
-        run: |
-          pip install poetry
       - name: Install Deps
         run: |
-          python -m poetry config virtualenvs.create false && poetry install
+          pip install -r requirements-dev.txt
       - name: Providing environment
         run: |
           ln .env.test stubborn/settings/.env
@@ -46,17 +43,14 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - name: Set up Python "3.10"
+      - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
-          python-version: "3.10"
+          python-version: "3.9"
       - uses: actions/checkout@v2
-      - name: Install Poetry
-        run: |
-          pip install poetry
       - name: Install Deps
         run: |
-          python -m poetry config virtualenvs.create false && poetry install
+          pip install -r requirements-dev.txt
       - name: Providing environment
         run: |
           ln .env.test stubborn/settings/.env
