--- a/codecov.yml
+++ b/codecov.yml
@@ -11,4 +11,14 @@ ignore:
   - "apps/urls.py"
   - "apps/widgets.py"
   - "**/__init__.py"
-  
+
+coverage:
+  range: 70..95
+  round: down
+  precision: 2
+  status:
+    project:
+      default:
+        target: 80%
+        threshold: 5%
+        base: auto
