--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ djangorestframework-xml = "2.0.0"
 ipdb = "0.13.13"
 psycopg2-binary = "2.9.7"
 requests = "2.31.0"
-uWSGI = "2.0.21"
+setuptools = "68.2.2"
+uWSGI = "2.0.22"
 
 [tool.poetry.dev-dependencies]
 black = "^23.9"
