--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,49 +1,53 @@
 [tool.poetry]
 name = "stubborn"
-version = "1.4.2"
+version = "1.4.3"
 description = "Just a simple REST API stub service."
 authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 Faker = "17.0.0"
 Jinja2 = "3.1.2"
-Pygments = "2.14.0"
-argon2-cffi = "21.3.0"
-django = "3.2.19"
-django-admin-rangefilter = "0.10.0"
-django-cors-headers = "3.13.0"
-django-environ = "0.10.0"
+Pygments = "2.16.1"
+argon2-cffi = "23.1.0"
+django = "^3.2"
+django-admin-rangefilter = "0.11.1"
+django-cors-headers = "4.2.0"
+django-environ = "0.11.2"
 djangorestframework = "3.14.0"
 djangorestframework-xml = "2.0.0"
 ipdb = "0.13.13"
-psycopg2-binary = "2.9.6"
+psycopg2-binary = "2.9.7"
 requests = "2.31.0"
-uWSGI = "2.0.21"
+setuptools = "68.2.2"  # temporary solution, just to replace the default version with CVE-2022-40897
+uWSGI = "2.0.22"
 
 [tool.poetry.dev-dependencies]
-black = "22.12.0"
-codecov = "2.1.13"
-django-coverage-plugin = "3.0.0"
-django-extensions = "3.2.1"
+black = "^23.9"
+codecov = "^2.1"
+django-coverage-plugin = "^3.1"
+django-extensions = "^3.2"
 django-stubs = "1.9.0"
-factory-boy = "3.2.1"
-flake8 = "6.0.0"
+factory-boy = "^3.3"
+flake8 = "^6.1"
 flake8-isort = "6.0.0"
-ipython = "8.10.0"
-mypy = "0.910"
-pydocstyle = "6.3.0"
-pytest-cov = "4.0.0"
+ipython = "^8.15"
+mypy = "0.931"
+pydocstyle = "^6.3"
+pytest-cov = "^4.1"
 pytest-django = "4.5.2"
-types-Pygments = "2.14.0.2"
-types-requests = "2.31.0.1"
+types-Pygments = "^2.14"
+types-requests = "^2.31"
 
 [tool.black]
 line-length = 120
 include = ".pyi?$"
 force-exclude = "migrations"
 skip-string-normalization = true
+
+[tool.ruff]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
