--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "stubborn"
-version = "1.4.3"
+version = "1.6.0"
 description = "Just a simple REST API stub service."
 authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
 license = "MIT"
@@ -12,15 +12,15 @@ Jinja2 = "3.1.2"
 Pygments = "2.16.1"
 argon2-cffi = "23.1.0"
 django = "^3.2"
-django-admin-rangefilter = "0.11.1"
-django-cors-headers = "4.2.0"
+django-admin-rangefilter = "0.11.2"
+django-cors-headers = "4.3.1"
 django-environ = "0.11.2"
 djangorestframework = "3.14.0"
 djangorestframework-xml = "2.0.0"
 ipdb = "0.13.13"
-psycopg2-binary = "2.9.7"
+psycopg2-binary = "2.9.9"
 requests = "2.31.0"
-setuptools = "68.2.2"  # temporary solution, just to replace the default version with CVE-2022-40897
+setuptools = "69.0.2"  # temporary solution, just to replace the default version with CVE-2022-40897
 uWSGI = "2.0.22"
 
 [tool.poetry.dev-dependencies]
@@ -31,7 +31,7 @@ django-extensions = "^3.2"
 django-stubs = "1.9.0"
 factory-boy = "^3.3"
 flake8 = "^6.1"
-flake8-isort = "6.0.0"
+flake8-isort = "^6.1"
 ipython = "^8.15"
 mypy = "0.931"
 pydocstyle = "^6.3"
