--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,24 @@ jobs:
   Flake8:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v1
+        with:
+          python-version: "3.11"
       - uses: actions/checkout@v2
-      - name: Install Flake8
+      - name: Install Deps
         run: |
-          pip install flake8 flake8-isort
+          pip install -r requirements-dev.txt
       - name: Run Flake8
         run: |
           flake8
   Mypy:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/checkout@v2
       - name: Install Deps
         run: |
@@ -43,10 +47,10 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - name: Set up Python 3.10
+      - name: Set up Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - uses: actions/checkout@v2
       - name: Install Deps
         run: |
